complete through part 5

--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -9,7 +9,18 @@
       <dd><%= @dish.name %></dd>
 
       <dt>Cuisine</dt>
-      <dd><%= @dish.cuisine_id %></dd>
+      <dd><%= @dish.cuisine.name %></dd>
+
+      <dt>Favorites</dt>
+      <dd>
+        <ul class="list-group">
+        <% @dish.favorites.each do |favorite| %>
+          <li class="list-group-item">
+            <%= favorite.venue.name %> (<%= favorite.user.username %>)
+          </li>
+        <% end %>
+        </ul>
+      </dd>
 
     </dl>
 
