--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -12,7 +12,18 @@
       <dd><%= @venue.address %></dd>
 
       <dt>Neighborhood</dt>
-      <dd><%= @venue.neighborhood_id %></dd>
+      <dd><%= @venue.neighborhood.name %></dd>
+
+      <dt>Favorites</dt>
+      <dd>
+        <ul class="list-group">
+        <% @venue.favorites.each do |favorite| %>
+          <li class="list-group-item">
+            <%= favorite.dish.name %> (<%= favorite.user.username %>)
+          </li>
+        <% end %>
+        </ul>
+      </dd>
 
     </dl>
 
