--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,17 @@
       <dt>Username</dt>
       <dd><%= @user.username %></dd>
 
+      <dt>Favorites</dt>
+      <dd>
+        <ul class="list-group">
+        <% @user.favorites.each do |favorite| %>
+          <li class="list-group-item">
+            <%= favorite.dish.name %>  at <%= favorite.venue.name %>
+          </li>
+        <% end %>
+        </ul>
+      </dd>
+
     </dl>
 
     <div class="btn-group btn-group-justified">
