--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -19,9 +19,52 @@
         <ul class="list-group">
         <% @venue.favorites.each do |favorite| %>
           <li class="list-group-item">
-            <%= favorite.dish.name %> (<%= favorite.user.username %>)
+            <%= favorite.dish.name %> by <%= favorite.user.username %>
           </li>
         <% end %>
+
+
+<li class="list-group-item">
+            <form action="/create_favorite" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+              <!-- Label and input for user -->
+              <div class="form-group">
+                <label for="user" class="control-label">
+                  User
+                </label>
+                <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :username, @favorite.user_id), :class => "form-control") %>
+              </div>
+
+              <!-- Label and input for venue -->
+              <div class="form-group">
+                <label for="dish" class="control-label">
+                  Dish
+                </label>
+                <%= select_tag(:dish_id, options_from_collection_for_select(Dish.all, :id, :name, @favorite.dish_id), :class => "form-control") %>
+              </div>
+
+              <!-- Label and input for notes -->
+              <div class="form-group">
+                <label for="note" class="control-label">
+                  Notes
+                </label>
+                <input type="text" id="notes" name="notes" placeholder="Notes" class="form-control" value="<%= @favorite.notes %>">
+              </div>
+
+              <!-- Label and input for venue_id -->
+              <input name="venue_id" type="hidden" value="<%= @venue.id %>">
+
+              <button class="btn btn-success">
+                Create Favorite
+              </button>
+              or
+              <a href="/venues">Cancel</a>
+            </form>
+          </li>
+
+
         </ul>
       </dd>
 
