--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -14,13 +14,62 @@
       <dt>Venues</dt>
       <dd>
         <ul class="list-group">
-        <% @neighborhood.venues.each do |venue| %>
+          <% @neighborhood.venues.each do |venue| %>
           <li class="list-group-item">
             <%= venue.name %>
           </li>
-        <% end %>
+          <% end %>
+
+
+          <li class="list-group-item">
+            <form action="/create_venue" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+              <!-- Label and input for user -->
+              <div class="form-group">
+                <label for="name" class="control-label">
+                  Name
+                </label>
+                <input type="text" id="name" name="name" placeholder="Name" class="form-control" value="<%= @venue.name %>">
+              </div>
+
+              <!-- Label and input for venue -->
+              <div class="form-group">
+                <label for="address" class="control-label">
+                  Address
+                </label>
+                <input type="text" id="address" name="address" placeholder="Address" class="form-control" value="<%= @venue.address %>">
+              </div>
+
+              <!-- Label and input for neighborhood_id -->
+              <input name="neighborhood_id" type="hidden" value="<%= @neighborhood.id %>">
+
+              <button class="btn btn-success">
+              Create Venue
+              </button>
+              or
+              <a href="/neighborhood">Cancel</a>
+            </form>
+          </li>
+
+
+
         </ul>
       </dd>
+
+
+<dt>Favorites</dt>
+      <dd>
+        <ul class="list-group">
+          <% @neighborhood.favorites.each do |favorite| %>
+          <li class="list-group-item">
+            <%= favorite.dish.name %> at <%= favorite.venue.name %> by <%= favorite.user.username %>
+          </li>
+          <% end %>
+          </ul>
+      </dd>
+
 
     </dl>
 
