--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,48 @@
             <%= favorite.dish.name %>  at <%= favorite.venue.name %>
           </li>
         <% end %>
+
+<li class="list-group-item">
+            <form action="/create_favorite" method="post">
+              <!-- Hidden input for authenticity token to protect from forgery -->
+              <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+              <!-- Label and input for dish -->
+              <div class="form-group">
+                <label for="dish" class="control-label">
+                  Dish
+                </label>
+                <%= select_tag(:dish_id, options_from_collection_for_select(Dish.all, :id, :name, @favorite.dish_id), :class => "form-control") %>
+              </div>
+
+              <!-- Label and input for venue -->
+              <div class="form-group">
+                <label for="venue" class="control-label">
+                  Venue
+                </label>
+                <%= select_tag(:venue_id, options_from_collection_for_select(Venue.all, :id, :name, @favorite.venue_id), :class => "form-control") %>
+              </div>
+
+              <!-- Label and input for notes -->
+              <div class="form-group">
+                <label for="note" class="control-label">
+                  Notes
+                </label>
+                <input type="text" id="notes" name="notes" placeholder="Notes" class="form-control" value="<%= @favorite.notes %>">
+              </div>
+
+              <!-- Label and input for user_id -->
+              <input name="user_id" type="hidden" value="<%= @user.id %>">
+
+              <button class="btn btn-success">
+                Create Favorite
+              </button>
+              or
+              <a href="/users">Cancel</a>
+            </form>
+          </li>
+
+
         </ul>
       </dd>
 
